# win-task-dialog-for-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  rust.code-workspace
.github/workflows/: publish.yml
example/: Cargo.toml  build.rs  example-manifest.rc  example.exe.manifest
example/src/: main.rs
src/: constants.rs  lib.rs
