[package]
name = "win-task-dialog"
description = "Simply call the Win32 API TaskDialogIndirect in Rust."
license = "MIT"
license_file = "LICENSE"
version = "0.1.0"
authors = ["RobinCode <xv.robincode@gmail.com>"]
edition = "2018"
repository = "https://github.com/RobinCodeX/win-task-dialog-for-rust"
homepage = "https://github.com/RobinCodeX/win-task-dialog-for-rust"
readme = "README.md"
keywords = ["windows", "win32", "dialog"]

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["impl-default","winnt","commoncontrols","commctrl","libloaderapi"] }