[package]
name = "win-task-dialog"
description = "Simply call the Win32 API TaskDialogIndirect in Rust."
license = "MIT"
version = "0.1.8"
authors = ["RobinCode <xv.robincode@gmail.com>"]
edition = "2018"
repository = "https://github.com/RobinCodeX/win-task-dialog-for-rust"
homepage = "https://github.com/RobinCodeX/win-task-dialog-for-rust"
readme = "README.md"
keywords = ["windows", "win32", "dialog"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
rustc-args = ["--cfg", "windows"]

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["impl-default","winnt","commoncontrols","commctrl","libloaderapi"] }
widestring = "1.0.2"