[package]
name = "win-task-dialog"
description = "Simply call the Win32 API TaskDialogIndirect in Rust."
license = "MIT"
version = "0.1.8"
authors = ["RobinCode <xv.robincode@gmail.com>"]
edition = "2018"
repository = "https://github.com/RobinCodeX/win-task-dialog-for-rust"
homepage = "https://github.com/RobinCodeX/win-task-dialog-for-rust"
readme = "README.md"
keywords = ["windows", "win32", "dialog"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
rustc-args = ["--cfg", "windows"]

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }
widestring = "1.2"
